# octobot

./: Cargo.toml
src/: config.rs  lib.rs  runtime.rs  slack.rs
src/jira/: api.rs
src/server/: admin.rs  github_handler.rs  html_handler.rs  http.rs  login.rs  main.rs  octobot_service.rs  redirect_service.rs
tests/: jira_workflow_test.rs
tests/mocks/: mock_jira.rs
